# ScrollStack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  MRIGESH_CORE_VISUAL_HANDOFF.md  NEXT_SESSION.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start.sh  stop.sh  technical-imp.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  container.py  main.py
backend/app/api/: __init__.py  books.py  control_plane.py  internal_tools.py  reels.py
backend/app/contracts/: __init__.py  artifacts.py  base.py  context.py  manga.py  reel.py  reel_delivery.py  registry.py  runs.py  source.py
backend/app/persistence/: __init__.py  documents.py  mongo.py  protocols.py  repositories.py
backend/app/services/: __init__.py  agent_worker.py  context_compiler.py  deterministic_manga_demo.py  domain_tools.py  errors.py  generation_runs.py  generation_workflow.py  hackathon_manga.py  hashing.py  image_generation.py  manga_editions.py  manga_layout.py  manga_page_planning.py  manga_production.py  manga_reader.py  manga_validation.py  memory.py  page_domain_tools.py  pdf_ingestion.py  projects.py  reels.py  scopes.py  source_units.py
backend/app/worker/: __init__.py  authority.py  celery_app.py  tasks.py
backend/scripts/: export_contracts.py  persist_phase1_proof.py  run_phase2_image_preview.py  verify_mongo_continuity.py
backend/tests/: test_app.py  test_contracts.py  test_control_plane_api.py  test_durable_context.py  test_manga_layout.py  test_manga_page_planning.py  test_reel_api.py  test_vertical_slice.py
(+125 files in other folders)
