[project]
name = "scrollstack-backend"
version = "0.1.0"
description = "ScrollStack FastAPI control plane and canonical contracts"
requires-python = ">=3.12,<3.13"
dependencies = [
  "beanie==2.0.0",
  "celery[redis]==5.5.3",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "pymupdf==1.24.14",
  "python-multipart==0.0.12",
  "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
  "mypy==1.17.1",
  "pytest==8.4.1",
  "ruff==0.12.7",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/contracts", "scripts", "tests/test_contracts.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
exclude = ["scripts/"]

[[tool.mypy.overrides]]
module = ["celery", "celery.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pymupdf"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
